--- a/style.css
+++ b/style.css
@@ -48,12 +48,11 @@ a:hover {
 }
 
 .container {
-  width: 90%;
+  width: 500px;
   margin: 0 auto;
 }
 
 .card {
-  width: 70%;
   margin-top: 20px;
   margin-bottom: 20px;
   background-color: white;
